<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tochka_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochka"
            android:textColor="#3C3F41"
            android:textSize="96sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tochka_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochka"
            android:textColor="#3C3F41"
            android:textSize="96sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tochka_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochka"
            android:textColor="#3C3F41"
            android:textSize="96sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tochka_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochka"
            android:textColor="#3C3F41"
            android:textSize="96sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tochka_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochka"
            android:textColor="#3C3F41"
            android:textSize="96sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tochka_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochka"
            android:textColor="#3C3F41"
            android:textSize="96sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="96dp"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="96dp"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="96dp"
            android:text="8"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent,VisualLintBounds">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="39dp"
            android:layout_height="100dp"
            android:text="@string/submit"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="24sp"/>


        <TextView
            android:id="@+id/tv_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="96dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_delte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>